[package]
name = "mta"
version = "0.1.0"
edition = "2021"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curv-kzen = { version = "0.9", default-features = false }
serde = "1.0"
serde_json = "1.0"
sha2 = "0.9"
zeroize = "1"
zk-paillier = { version = "0.4.2", default-features = false }

[dependencies.paillier]
version = "0.4.2"
package = "kzen-paillier"
default-features = false


[features]
default = ["curv-kzen/rust-gmp-kzen"]